--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Rate -->
     <div class="bg-white rounded-xl p-4 mb-6 border border-gray-100 shadow-sm text-center">
       <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Rate USD Hari Ini</p>
-      <h3 id="displayRate" class="text-2xl font-black text-purple-500 mt-1 italic">Rp 17.000</h3>
+      <h3 id="displayRate" class="text-2xl font-black text-purple-500 mt-1 italic">Rp 17.100</h3>
     </div>
     
     <!-- Input USD -->
@@ -54,7 +54,7 @@
     </div>
 
     <p class="text-[10px] text-gray-400 mt-6 italic text-center">
-      *Rate bisa kamu ubah langsung di file HTML.
+      *Rate dapat berubah sewaktu-waktu bosku ^^.
     </p>
   </div>
 
@@ -74,3 +74,4 @@
   </script>
 </body>
 </html>
+
