--- a/index.html
+++ b/index.html
@@ -6,60 +6,80 @@
   <title>Toko Celine - Kalkulator Rate</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    #video-bg {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
+
     body {
-      background-image: url('gambar1.jpg'); /* ganti sesuai ekstensi file */
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
+      margin: 0;
+      font-family: sans-serif;
     }
+
     .glass-effect {
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(10px);
+      background: rgba(255, 255, 255, 0.75);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
       border: 1px solid rgba(255, 255, 255, 0.3);
     }
   </style>
 </head>
 <body class="p-5">
 
-  <div class="max-w-md w-full glass-effect rounded-2xl shadow-2xl overflow-hidden p-8 border-t-8 border-purple-400">
+  <video autoplay muted loop playsinline id="video-bg">
+    <source src="gambar2.mp4" type="video/mp4">
+    Browser Anda tidak mendukung video background.
+  </video>
+
+  <div class="max-w-md w-full glass-effect rounded-3xl shadow-2xl overflow-hidden p-8 border-t-8 border-purple-500">
     <div class="text-center mb-6">
-      <h1 class="text-3xl font-extrabold text-purple-500 tracking-tight">Selamat Datang di Toko Celine!</h1>
-      <p class="text-gray-500 text-sm mt-1 font-medium italic">Solusi Jual Beli Dollar Terpercaya</p>
+      <h1 class="text-3xl font-extrabold text-purple-600 tracking-tight">Selamat Datang di Toko Celine!</h1>
+      <p class="text-gray-600 text-sm mt-1 font-medium italic">Solusi Jual Beli Dollar Terpercaya</p>
     </div>
 
-    <!-- Rate -->
-    <div class="bg-white rounded-xl p-4 mb-6 border border-gray-100 shadow-sm text-center">
+    <div class="bg-white/80 rounded-2xl p-4 mb-6 border border-purple-100 shadow-sm text-center">
       <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Rate USD Hari Ini</p>
-      <h3 id="displayRate" class="text-2xl font-black text-purple-500 mt-1 italic">Rp 17.100</h3>
+      <p id="tanggalHariIni" class="text-[11px] text-purple-400 font-semibold mb-1"></p>
+      <h3 id="displayRate" class="text-2xl font-black text-purple-600 italic">Rp 17.100</h3>
     </div>
     
-    <!-- Input USD -->
     <div class="mb-6">
       <label class="block text-sm font-bold text-gray-700 mb-2">Jumlah Dollar (USD)</label>
       <div class="relative">
-        <span class="absolute inset-y-0 left-0 pl-4 flex items-center text-purple-500 font-bold text-lg">$</span>
+        <span class="absolute inset-y-0 left-0 pl-4 flex items-center text-purple-600 font-bold text-lg">$</span>
         <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
-          class="block w-full pl-10 pr-4 py-4 border-2 border-gray-200 rounded-xl focus:ring-4 focus:ring-purple-100 focus:border-purple-400 outline-none text-2xl font-bold transition-all">
+          class="block w-full pl-10 pr-4 py-4 border-2 border-purple-200 rounded-xl focus:ring-4 focus:ring-purple-100 focus:border-purple-500 outline-none text-2xl font-bold transition-all bg-white/50">
       </div>
     </div>
 
-    <!-- Output -->
-    <div class="bg-gradient-to-br from-purple-400 to-purple-500 p-6 rounded-2xl text-center shadow-lg">
-      <p class="text-xs text-purple-100 font-bold uppercase tracking-widest opacity-80">Total Pembayaran (IDR)</p>
+    <div class="bg-gradient-to-br from-purple-500 to-indigo-600 p-6 rounded-2xl text-center shadow-lg">
+      <p class="text-xs text-purple-100 font-bold uppercase tracking-widest opacity-90">Total Pembayaran (IDR)</p>
       <h1 id="idrOutput" class="text-4xl font-black text-white mt-2">Rp 0</h1>
     </div>
 
-    <p class="text-[10px] text-gray-400 mt-6 italic text-center">
-      *Rate dapat berubah sewaktu-waktu bosku ^^.
+    <p class="text-[10px] text-gray-500 mt-6 italic text-center font-medium">
+      NB : Rate dapat berubah sewaktu-waktu bosku ^^
     </p>
   </div>
 
   <script>
-    let rateAktif = 17000; // ubah angka ini sesuai kurs terbaru
+    let rateAktif = 17100; 
+
+    // SCRIPT UNTUK TANGGAL OTOMATIS
+    const opsiTanggal = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+    const hariIni = new Date().toLocaleDateString('id-ID', opsiTanggal);
+    document.getElementById('tanggalHariIni').innerText = hariIni;
+
+    document.getElementById('displayRate').innerText = "Rp " + rateAktif.toLocaleString('id-ID');
 
     function hitung() {
       const usd = document.getElementById('usdInput').value;
@@ -74,4 +94,3 @@
   </script>
 </body>
 </html>
-
