--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <p class="text-[11px] text-gray-500 mt-6 italic text-center font-semibold">
-      *Rate dapat berubah sewaktu-waktu bosku ^^.
+      *Rate dapat berubah sewaktu-waktu bosku ^^
     </p>
   </div>
 
@@ -118,3 +118,4 @@
   </script>
 </body>
 </html>
+
