--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div class="border-t border-gray-200 pt-6">
       <p class="text-center text-[10px] font-bold text-gray-400 uppercase tracking-[0.2em] mb-3">Hubungi Admin</p>
-      <a href="https://t.me/selinnaa_" target="_blank" class="flex items-center justify-center gap-3 bg-white/80 border border-purple-200 py-3 rounded-2xl shadow-sm hover:shadow-md transition-all group overflow-hidden relative">
+      <a href="https://t.me/selinnaa" target="_blank" class="flex items-center justify-center gap-3 bg-white/80 border border-purple-200 py-3 rounded-2xl shadow-sm hover:shadow-md transition-all group overflow-hidden relative">
         <div class="absolute inset-y-0 left-0 w-1 animated-gradient"></div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6">
         <span class="text-gray-700 font-bold tracking-tight group-hover:text-purple-600 transition-colors">@selinnaa_</span>
@@ -131,3 +131,4 @@
   </script>
 </body>
 </html>
+
