--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="animated-gradient p-7 rounded-3xl text-center shadow-xl transform smooth-transition hover:scale-105 active:scale-95 cursor-default mb-6 select-none">
-      <p class="text-xs text-white font-bold uppercase tracking-widest opacity-90">Total Kamu Terima (IDR)</p>
+      <p class="text-xs text-white font-bold uppercase tracking-widest opacity-90">Total Kamu Bayar (IDR)</p>
       <h1 id="idrOutput" class="text-4xl font-black text-white mt-2 drop-shadow-md">Rp 0</h1>
     </div>
 
@@ -146,3 +146,4 @@
   </script>
 </body>
 </html>
+
