--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Toko Celine - Kalkulator Rate</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* 1. Efek Smooth Page Load (Animasi Muncul) */
+    /* 1. Efek Smooth Page Load */
     @keyframes fadeInPage {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -34,7 +34,7 @@
       justify-content: center;
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #000; /* Fallback warna hitam saat video loading */
+      background-color: #000;
     }
 
     /* 3. Animasi Perubahan Warna (Gradient) */
@@ -59,12 +59,18 @@
       animation: gradientAnimation 3s linear infinite;
     }
 
-    /* 4. Efek Kaca (Glassmorphism) */
+    /* 4. Efek Kaca (Glassmorphism) - DIUBAH AGAR LEBIH TRANSPARAN */
     .glass-effect {
-      background: rgba(255, 255, 255, 0.75);
-      backdrop-filter: blur(15px);
-      -webkit-backdrop-filter: blur(15px);
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.45); /* Turun dari 0.75 ke 0.45 */
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    /* Efek Kaca lebih tipis untuk kotak kecil */
+    .glass-inner {
+      background: rgba(255, 255, 255, 0.5);
+      backdrop-filter: blur(5px);
     }
 
     .smooth-transition {
@@ -83,21 +89,21 @@
 
     <div class="text-center mb-6 mt-2">
       <h1 class="text-4xl font-black animated-text tracking-tighter">Toko Celine</h1>
-      <p class="text-gray-600 text-sm mt-1 font-medium italic">Solusi Jual Beli Dollar Terpercaya</p>
+      <p class="text-white text-sm mt-1 font-medium italic drop-shadow-sm">Solusi Jual Beli Dollar Terpercaya</p>
     </div>
 
-    <div class="bg-white/80 rounded-2xl p-4 mb-6 border border-purple-100 shadow-sm text-center transform smooth-transition hover:shadow-md">
-      <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Rate USD Hari Ini</p>
-      <p id="tanggalRealtime" class="text-[11px] text-purple-500 font-bold mb-1"></p>
-      <h3 id="displayRate" class="text-3xl font-black text-purple-600 italic">Rp 0</h3>
+    <div class="glass-inner rounded-2xl p-4 mb-6 border border-white/30 shadow-sm text-center transform smooth-transition hover:shadow-md">
+      <p class="text-[10px] font-bold text-gray-700 uppercase tracking-widest">Rate USD Hari Ini</p>
+      <p id="tanggalRealtime" class="text-[11px] text-purple-700 font-bold mb-1"></p>
+      <h3 id="displayRate" class="text-3xl font-black text-purple-700 italic">Rp 0</h3>
     </div>
     
     <div class="mb-6">
-      <label class="block text-sm font-bold text-gray-700 mb-2 text-center uppercase tracking-tighter">Masukkan Jumlah Dollar (USD)</label>
+      <label class="block text-sm font-bold text-gray-800 mb-2 text-center uppercase tracking-tighter">Masukkan Jumlah Dollar (USD)</label>
       <div class="relative group">
-        <span class="absolute inset-y-0 left-0 pl-4 flex items-center text-purple-600 font-bold text-xl smooth-transition group-focus-within:scale-125">$</span>
+        <span class="absolute inset-y-0 left-0 pl-4 flex items-center text-purple-700 font-bold text-xl smooth-transition group-focus-within:scale-125">$</span>
         <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
-          class="block w-full pl-10 pr-4 py-5 border-2 border-purple-100 rounded-2xl outline-none text-3xl font-bold bg-white/50 text-center smooth-transition focus:ring-4 focus:ring-purple-200 focus:border-purple-500 focus:bg-white shadow-inner">
+          class="block w-full pl-10 pr-4 py-5 border-2 border-white/40 rounded-2xl outline-none text-3xl font-bold bg-white/30 text-center smooth-transition focus:ring-4 focus:ring-purple-200 focus:border-white focus:bg-white/80 shadow-inner text-gray-900">
       </div>
     </div>
 
@@ -106,17 +112,17 @@
       <h1 id="idrOutput" class="text-4xl font-black text-white mt-2 drop-shadow-md">Rp 0</h1>
     </div>
 
-    <div class="border-t border-gray-200 pt-6">
-      <p class="text-center text-[10px] font-bold text-gray-400 uppercase tracking-[0.2em] mb-3">Hubungi Admin</p>
-      <a href="https://t.me/selinnaa_" target="_blank" 
-         class="flex items-center justify-center gap-3 bg-white/80 border border-purple-200 py-4 rounded-2xl shadow-sm smooth-transition hover:shadow-lg hover:border-purple-400 hover:-translate-y-1 active:scale-95 group overflow-hidden relative">
+    <div class="border-t border-white/30 pt-6">
+      <p class="text-center text-[10px] font-bold text-gray-700 uppercase tracking-[0.2em] mb-3">Hubungi Admin</p>
+      <a href="https://t.me/selinnaa" target="_blank" 
+         class="flex items-center justify-center gap-3 glass-inner border border-white/40 py-4 rounded-2xl shadow-sm smooth-transition hover:shadow-lg hover:border-white/60 hover:-translate-y-1 active:scale-95 group overflow-hidden relative">
         <div class="absolute inset-y-0 left-0 w-1 animated-gradient smooth-transition group-hover:w-2"></div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6 smooth-transition group-hover:rotate-12">
-        <span class="text-gray-700 font-bold tracking-tight group-hover:text-purple-600 transition-colors">@selinnaa</span>
+        <span class="text-gray-800 font-bold tracking-tight group-hover:text-purple-700 transition-colors">@selinnaa</span>
       </a>
     </div>
 
-    <p class="text-[11px] text-gray-500 mt-6 italic text-center font-semibold">
+    <p class="text-[11px] text-gray-800 mt-6 italic text-center font-semibold">
       *Rate dapat berubah sewaktu-waktu bosku ^^
     </p>
   </div>
@@ -146,5 +152,3 @@
   </script>
 </body>
 </html>
-
-
