--- a/index.html
+++ b/index.html
@@ -3,28 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toko Celine - Kalkulator Rate</title>
+  <title>Toko Celine - Premium Exchange</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  
+  <script>
+    // ==========================================
+    // UPDATE RATE DI SINI YA SAYANG :* (HANYA ANGKA SAJA)
+    // ==========================================
+    const rateAktif = 17250; 
+    // ==========================================
+  </script>
+
   <style>
-    /* 1. Efek Smooth Page Load */
+    @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
+
+    /* 1. Page Entrance & Floating Animation */
     @keyframes fadeInPage {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: scale(0.9) translateY(20px); }
+      to { opacity: 1; transform: scale(1) translateY(0); }
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0px); }
     }
 
     .page-transition {
-      animation: fadeInPage 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+      animation: fadeInPage 1s cubic-bezier(0.22, 1, 0.36, 1) forwards,
+                 float 4s ease-in-out infinite;
     }
 
-    /* 2. Background Video Full Screen */
     #video-bg {
       position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%; 
-      min-height: 100%;
+      right: 0; bottom: 0;
+      min-width: 100%; min-height: 100%;
       z-index: -1;
       object-fit: cover;
+      filter: brightness(0.7);
     }
 
     body {
@@ -33,11 +49,12 @@
       align-items: center;
       justify-content: center;
       margin: 0;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Plus Jakarta Sans', sans-serif;
       background-color: #000;
+      overflow: hidden;
     }
 
-    /* 3. Animasi Perubahan Warna (Gradient) */
+    /* 2. Advanced Gradient & Glow */
     @keyframes gradientAnimation {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -47,97 +64,112 @@
     .animated-gradient {
       background: linear-gradient(-45deg, #a855f7, #3b82f6, #ec4899, #8b5cf6);
       background-size: 400% 400%;
-      animation: gradientAnimation 10s ease infinite;
+      animation: gradientAnimation 8s ease infinite;
     }
 
-    /* Animasi Teks Toko Celine */
     .animated-text {
-      background: linear-gradient(to right, #a855f7, #3b82f6, #ec4899, #a855f7);
+      background: linear-gradient(to right, #c084fc, #60a5fa, #f472b6, #c084fc);
       background-size: 200% auto;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: gradientAnimation 3s linear infinite;
     }
 
-    /* 4. Efek Kaca (Glassmorphism) - DIUBAH AGAR LEBIH TRANSPARAN */
-    .glass-effect {
-      background: rgba(255, 255, 255, 0.45); /* Turun dari 0.75 ke 0.45 */
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+    /* 3. Luxury Glass Effect */
+    .glass-card {
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(25px);
+      -webkit-backdrop-filter: blur(25px);
       border: 1px solid rgba(255, 255, 255, 0.2);
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
     }
 
-    /* Efek Kaca lebih tipis untuk kotak kecil */
     .glass-inner {
-      background: rgba(255, 255, 255, 0.5);
-      backdrop-filter: blur(5px);
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    /* Glow effect behind the card */
+    .glow-overlay {
+      position: absolute;
+      top: 50%; left: 50%;
+      width: 120%; height: 120%;
+      background: radial-gradient(circle, rgba(168, 85, 247, 0.15) 0%, transparent 70%);
+      transform: translate(-50%, -50%);
+      z-index: -1;
     }
 
     .smooth-transition {
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+
+    input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+      -webkit-appearance: none; margin: 0;
     }
   </style>
 </head>
-<body class="p-5">
+<body class="p-6">
 
   <video autoplay muted loop playsinline id="video-bg">
     <source src="gambar3.mp4" type="video/mp4">
   </video>
 
-  <div class="max-w-md w-full glass-effect rounded-3xl shadow-2xl overflow-hidden p-8 relative page-transition">
-    <div class="absolute top-0 left-0 w-full h-2 animated-gradient"></div>
+  <div class="glow-overlay"></div>
 
-    <div class="text-center mb-6 mt-2">
-      <h1 class="text-4xl font-black animated-text tracking-tighter">Toko Celine</h1>
-      <p class="text-white text-sm mt-1 font-medium italic drop-shadow-sm">Solusi Jual Beli Dollar Terpercaya</p>
-    </div>
+  <div class="max-w-md w-full glass-card rounded-[2.5rem] overflow-hidden p-8 relative page-transition">
+    <div class="absolute top-0 left-0 w-full h-1.5 animated-gradient"></div>
 
-    <div class="glass-inner rounded-2xl p-4 mb-6 border border-white/30 shadow-sm text-center transform smooth-transition hover:shadow-md">
-      <p class="text-[10px] font-bold text-gray-700 uppercase tracking-widest">Rate USD Hari Ini</p>
-      <p id="tanggalRealtime" class="text-[11px] text-purple-700 font-bold mb-1"></p>
-      <h3 id="displayRate" class="text-3xl font-black text-purple-700 italic">Rp 0</h3>
-    </div>
-    
-    <div class="mb-6">
-      <label class="block text-sm font-bold text-gray-800 mb-2 text-center uppercase tracking-tighter">Masukkan Jumlah Dollar (USD)</label>
-      <div class="relative group">
-        <span class="absolute inset-y-0 left-0 pl-4 flex items-center text-purple-700 font-bold text-xl smooth-transition group-focus-within:scale-125">$</span>
-        <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
-          class="block w-full pl-10 pr-4 py-5 border-2 border-white/40 rounded-2xl outline-none text-3xl font-bold bg-white/30 text-center smooth-transition focus:ring-4 focus:ring-purple-200 focus:border-white focus:bg-white/80 shadow-inner text-gray-900">
+    <div class="text-center mb-8 mt-4">
+      <h1 class="text-5xl font-extrabold animated-text tracking-tighter mb-2">Toko Celine</h1>
+      <div class="inline-block px-3 py-1 rounded-full glass-inner text-[10px] text-blue-200 font-bold uppercase tracking-[0.2em]">
+        ✨ Trusted Digital Exchange ✨
       </div>
     </div>
 
-    <div class="animated-gradient p-7 rounded-3xl text-center shadow-xl transform smooth-transition hover:scale-105 active:scale-95 cursor-default mb-6 select-none">
-      <p class="text-xs text-white font-bold uppercase tracking-widest opacity-90">Total yang harus di bayar (IDR)</p>
-      <h1 id="idrOutput" class="text-4xl font-black text-white mt-2 drop-shadow-md">Rp 0</h1>
+    <div class="glass-inner rounded-3xl p-5 mb-8 text-center transform smooth-transition hover:scale-[1.02]">
+      <div class="flex items-center justify-center gap-2 mb-1">
+        <span class="w-2 h-2 rounded-full animated-gradient"></span>
+        <p class="text-[10px] font-extrabold text-blue-100 uppercase tracking-widest">Live Rate IDR</p>
+      </div>
+      <p id="tanggalRealtime" class="text-[12px] text-white/60 mb-2"></p>
+      <h3 id="displayRate" class="text-4xl font-black text-white tracking-tight italic">Rp 0</h3>
+    </div>
+    
+    <div class="mb-8 relative">
+      <label class="block text-[11px] font-bold text-blue-200 mb-3 text-center uppercase tracking-[0.15em]">Jumlah Dollar Yang Dijual</label>
+      <div class="relative group">
+        <div class="absolute inset-y-0 left-6 flex items-center text-blue-300 font-bold text-2xl group-focus-within:text-white smooth-transition">$</div>
+        <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
+          class="block w-full pl-14 pr-8 py-6 bg-white/5 border-2 border-white/10 rounded-[2rem] outline-none text-4xl font-bold text-white text-center smooth-transition focus:border-blue-400 focus:bg-white/10 shadow-2xl placeholder:text-white/10">
+      </div>
     </div>
 
-    <div class="border-t border-white/30 pt-6">
-      <p class="text-center text-[10px] font-bold text-gray-700 uppercase tracking-[0.2em] mb-3">Hubungi Admin</p>
+    <div class="animated-gradient p-8 rounded-[2rem] text-center shadow-[0_20px_40px_-15px_rgba(168,85,247,0.5)] transform smooth-transition hover:scale-105 active:scale-95 cursor-pointer mb-8">
+      <p class="text-[10px] text-white font-black uppercase tracking-[0.2em] opacity-80">Anda Akan Menerima</p>
+      <h1 id="idrOutput" class="text-4xl font-black text-white mt-2 drop-shadow-lg tracking-tight">Rp 0</h1>
+    </div>
+
+    <div class="border-t border-white/10 pt-8 text-center">
+      <p class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] mb-4">Konsultasi & Transaksi</p>
       <a href="https://t.me/selinnaa" target="_blank" 
-         class="flex items-center justify-center gap-3 glass-inner border border-white/40 py-4 rounded-2xl shadow-sm smooth-transition hover:shadow-lg hover:border-white/60 hover:-translate-y-1 active:scale-95 group overflow-hidden relative">
-        <div class="absolute inset-y-0 left-0 w-1 animated-gradient smooth-transition group-hover:w-2"></div>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6 smooth-transition group-hover:rotate-12">
-        <span class="text-gray-800 font-bold tracking-tight group-hover:text-purple-700 transition-colors">@selinnaa</span>
+         class="inline-flex items-center gap-4 bg-white/10 border border-white/20 px-8 py-4 rounded-full smooth-transition hover:bg-white/20 hover:border-white/40 hover:-translate-y-1 active:scale-90 group">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6 group-hover:rotate-12 transition-transform">
+        <span class="text-white font-extrabold tracking-tight">@selinnaa</span>
       </a>
     </div>
 
-    <p class="text-[11px] text-gray-800 mt-6 italic text-center font-semibold">
-      *Rate dapat berubah sewaktu-waktu bosku ^^
+    <p class="text-[10px] text-white/30 mt-8 italic text-center font-medium">
+      *Rate update otomatis mengikuti pasar global
     </p>
   </div>
 
   <script>
-    let rateAktif = 17100; 
-
     function updateTanggal() {
       const opsi = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
       const hariIni = new Date().toLocaleDateString('id-ID', opsi);
       document.getElementById('tanggalRealtime').innerText = hariIni;
     }
-
-    updateTanggal();
-    document.getElementById('displayRate').innerText = "Rp " + rateAktif.toLocaleString('id-ID');
 
     function hitung() {
       const usd = document.getElementById('usdInput').value;
@@ -149,6 +181,9 @@
       });
       document.getElementById('idrOutput').innerText = (usd > 0) ? formatter.format(total) : "Rp 0";
     }
+
+    updateTanggal();
+    document.getElementById('displayRate').innerText = "Rp " + rateAktif.toLocaleString('id-ID');
   </script>
 </body>
 </html>
