--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <script>
     // ==========================================
-    // UPDATE RATE DI SINI YA SAYANG :* (HANYA ANGKA SAJA)
+    // UPDATE RATE DI SINI (HANYA ANGKA SAJA)
     // ==========================================
     const rateAktif = 17250; 
     // ==========================================
@@ -40,7 +40,7 @@
       min-width: 100%; min-height: 100%;
       z-index: -1;
       object-fit: cover;
-      filter: brightness(0.7);
+      filter: brightness(0.6); /* Sedikit lebih gelap agar teks makin kontras */
     }
 
     body {
@@ -51,7 +51,7 @@
       margin: 0;
       font-family: 'Plus Jakarta Sans', sans-serif;
       background-color: #000;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     /* 2. Advanced Gradient & Glow */
@@ -77,33 +77,24 @@
 
     /* 3. Luxury Glass Effect */
     .glass-card {
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255, 255, 255, 0.12);
       backdrop-filter: blur(25px);
       -webkit-backdrop-filter: blur(25px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.6);
     }
 
     .glass-inner {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.08);
       backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    /* Glow effect behind the card */
-    .glow-overlay {
-      position: absolute;
-      top: 50%; left: 50%;
-      width: 120%; height: 120%;
-      background: radial-gradient(circle, rgba(168, 85, 247, 0.15) 0%, transparent 70%);
-      transform: translate(-50%, -50%);
-      z-index: -1;
     }
 
     .smooth-transition {
       transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 
+    /* Menghilangkan panah di input number */
     input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
       -webkit-appearance: none; margin: 0;
     }
@@ -115,29 +106,27 @@
     <source src="gambar3.mp4" type="video/mp4">
   </video>
 
-  <div class="glow-overlay"></div>
-
   <div class="max-w-md w-full glass-card rounded-[2.5rem] overflow-hidden p-8 relative page-transition">
     <div class="absolute top-0 left-0 w-full h-1.5 animated-gradient"></div>
 
     <div class="text-center mb-8 mt-4">
       <h1 class="text-5xl font-extrabold animated-text tracking-tighter mb-2">Toko Celine</h1>
-      <div class="inline-block px-3 py-1 rounded-full glass-inner text-[10px] text-blue-200 font-bold uppercase tracking-[0.2em]">
-        ✨ Trusted Digital Exchange ✨
+      <div class="inline-block px-4 py-1.5 rounded-full glass-inner text-[10px] text-blue-200 font-bold uppercase tracking-[0.2em]">
+        💎 Premium Dollar Supplier 💎
       </div>
     </div>
 
     <div class="glass-inner rounded-3xl p-5 mb-8 text-center transform smooth-transition hover:scale-[1.02]">
       <div class="flex items-center justify-center gap-2 mb-1">
-        <span class="w-2 h-2 rounded-full animated-gradient"></span>
-        <p class="text-[10px] font-extrabold text-blue-100 uppercase tracking-widest">Live Rate IDR</p>
+        <span class="w-2 h-2 rounded-full animated-gradient animate-pulse"></span>
+        <p class="text-[10px] font-extrabold text-blue-100 uppercase tracking-widest">Rate Jual Hari Ini</p>
       </div>
-      <p id="tanggalRealtime" class="text-[12px] text-white/60 mb-2"></p>
+      <p id="tanggalRealtime" class="text-[12px] text-white/50 mb-2"></p>
       <h3 id="displayRate" class="text-4xl font-black text-white tracking-tight italic">Rp 0</h3>
     </div>
     
     <div class="mb-8 relative">
-      <label class="block text-[11px] font-bold text-blue-200 mb-3 text-center uppercase tracking-[0.15em]">Jumlah Dollar Yang Dijual</label>
+      <label class="block text-[11px] font-bold text-blue-200 mb-3 text-center uppercase tracking-[0.15em]">Dollar yang mau dibeli</label>
       <div class="relative group">
         <div class="absolute inset-y-0 left-6 flex items-center text-blue-300 font-bold text-2xl group-focus-within:text-white smooth-transition">$</div>
         <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
@@ -146,21 +135,21 @@
     </div>
 
     <div class="animated-gradient p-8 rounded-[2rem] text-center shadow-[0_20px_40px_-15px_rgba(168,85,247,0.5)] transform smooth-transition hover:scale-105 active:scale-95 cursor-pointer mb-8">
-      <p class="text-[10px] text-white font-black uppercase tracking-[0.2em] opacity-80">Anda Akan Menerima</p>
+      <p class="text-[10px] text-white font-black uppercase tracking-[0.2em] opacity-80">Total yang harus dibayarkan</p>
       <h1 id="idrOutput" class="text-4xl font-black text-white mt-2 drop-shadow-lg tracking-tight">Rp 0</h1>
     </div>
 
     <div class="border-t border-white/10 pt-8 text-center">
-      <p class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] mb-4">Konsultasi & Transaksi</p>
+      <p class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] mb-4">Hubungi Admin Untuk Order</p>
       <a href="https://t.me/selinnaa" target="_blank" 
-         class="inline-flex items-center gap-4 bg-white/10 border border-white/20 px-8 py-4 rounded-full smooth-transition hover:bg-white/20 hover:border-white/40 hover:-translate-y-1 active:scale-90 group">
+         class="inline-flex items-center gap-4 bg-white/10 border border-white/20 px-10 py-4 rounded-full smooth-transition hover:bg-white/20 hover:border-white/40 hover:-translate-y-1 active:scale-90 group">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6 group-hover:rotate-12 transition-transform">
         <span class="text-white font-extrabold tracking-tight">@selinnaa</span>
       </a>
     </div>
 
     <p class="text-[10px] text-white/30 mt-8 italic text-center font-medium">
-      *Rate update otomatis mengikuti pasar global
+      *Transfer sesuai nominal yang tertera bosku ^^
     </p>
   </div>
 
