--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
     
     <div class="mb-8 relative">
-      <label class="block text-[11px] font-bold text-blue-200 mb-3 text-center uppercase tracking-[0.15em]">Dollar yang mau dibeli</label>
+      <label class="block text-[11px] font-bold text-blue-200 mb-3 text-center uppercase tracking-[0.15em]">Ketik dibawah ini untuk Dollar yang mau dibeli</label>
       <div class="relative group">
         <div class="absolute inset-y-0 left-6 flex items-center text-blue-300 font-bold text-2xl group-focus-within:text-white smooth-transition">$</div>
         <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
@@ -176,3 +176,4 @@
   </script>
 </body>
 </html>
+
