--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
 
-    /* 1. Page Entrance & Floating Animation */
+    /* Animasi Muncul & Melayang */
     @keyframes fadeInPage {
       from { opacity: 0; transform: scale(0.9) translateY(20px); }
       to { opacity: 1; transform: scale(1) translateY(0); }
     }
-
     @keyframes float {
-      0% { transform: translateY(0px); }
+      0%, 100% { transform: translateY(0px); }
       50% { transform: translateY(-10px); }
-      100% { transform: translateY(0px); }
     }
-
     .page-transition {
       animation: fadeInPage 1s cubic-bezier(0.22, 1, 0.36, 1) forwards,
                  float 4s ease-in-out infinite;
@@ -40,7 +37,7 @@
       min-width: 100%; min-height: 100%;
       z-index: -1;
       object-fit: cover;
-      filter: brightness(0.6); /* Sedikit lebih gelap agar teks makin kontras */
+      filter: brightness(0.6);
     }
 
     body {
@@ -54,28 +51,29 @@
       overflow-x: hidden;
     }
 
-    /* 2. Advanced Gradient & Glow */
-    @keyframes gradientAnimation {
+    /* EFEK EMBOSSED + ANIMASI WARNA */
+    @keyframes gradientShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
-    .animated-gradient {
-      background: linear-gradient(-45deg, #a855f7, #3b82f6, #ec4899, #8b5cf6);
-      background-size: 400% 400%;
-      animation: gradientAnimation 8s ease infinite;
-    }
-
-    .animated-text {
-      background: linear-gradient(to right, #c084fc, #60a5fa, #f472b6, #c084fc);
+    .embossed-text {
+      font-weight: 900;
+      letter-spacing: -0.05em;
+      background: linear-gradient(to bottom, #ffffff, #8b5cf6, #3b82f6);
       background-size: 200% auto;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: gradientAnimation 3s linear infinite;
+      animation: gradientShift 4s linear infinite;
+      /* Teknik Shadow untuk efek Embossed (Timbul) */
+      text-shadow: 
+        -1px -1px 0px rgba(255,255,255,0.4), 
+         1px  1px 0px rgba(0,0,0,0.8),
+         2px  2px 10px rgba(0,0,0,0.5);
     }
 
-    /* 3. Luxury Glass Effect */
+    /* Luxury Glass Effect */
     .glass-card {
       background: rgba(255, 255, 255, 0.12);
       backdrop-filter: blur(25px);
@@ -90,11 +88,16 @@
       border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
+    .animated-gradient {
+      background: linear-gradient(-45deg, #a855f7, #3b82f6, #ec4899, #8b5cf6);
+      background-size: 400% 400%;
+      animation: gradientShift 8s ease infinite;
+    }
+
     .smooth-transition {
       transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 
-    /* Menghilangkan panah di input number */
     input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
       -webkit-appearance: none; margin: 0;
     }
@@ -110,7 +113,7 @@
     <div class="absolute top-0 left-0 w-full h-1.5 animated-gradient"></div>
 
     <div class="text-center mb-8 mt-4">
-      <h1 class="text-5xl font-extrabold animated-text tracking-tighter mb-2">Toko Celine</h1>
+      <h1 class="text-5xl embossed-text mb-2">Toko Celine</h1>
       <div class="inline-block px-4 py-1.5 rounded-full glass-inner text-[10px] text-blue-200 font-bold uppercase tracking-[0.2em]">
         💎 Premium Dollar Supplier 💎
       </div>
@@ -125,8 +128,8 @@
       <h3 id="displayRate" class="text-4xl font-black text-white tracking-tight italic">Rp 0</h3>
     </div>
     
-    <div class="mb-8 relative">
-      <label class="block text-[11px] font-bold text-blue-200 mb-3 text-center uppercase tracking-[0.15em]">Ketik dibawah ini untuk Dollar yang mau dibeli</label>
+    <div class="mb-8 relative text-center">
+      <label class="block text-[11px] font-bold text-blue-200 mb-3 uppercase tracking-[0.15em]">Ketik dibawah ini untuk Dollar yang mau dibeli</label>
       <div class="relative group">
         <div class="absolute inset-y-0 left-6 flex items-center text-blue-300 font-bold text-2xl group-focus-within:text-white smooth-transition">$</div>
         <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
@@ -148,7 +151,7 @@
       </a>
     </div>
 
-    <p class="text-[10px] text-white/30 mt-8 italic text-center font-medium">
+    <p class="text-[13px] text-white font-bold mt-8 italic text-center drop-shadow-[0_2px_4px_rgba(0,0,0,1)] bg-black/20 py-2 rounded-xl border border-white/5">
       *Transfer sesuai nominal yang tertera bosku ^^
     </p>
   </div>
@@ -176,4 +179,3 @@
   </script>
 </body>
 </html>
-
