--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
 
     <p class="text-[13px] text-white font-bold mt-8 italic text-center drop-shadow-[0_2px_4px_rgba(0,0,0,1)] bg-black/20 py-2 rounded-xl border border-white/5">
-      *Transfer sesuai nominal yang tertera bosku ^^
+      *Rate sewaktu-waktu dapat berubah, pastikan bosku update ^^
     </p>
   </div>
 
@@ -179,3 +179,4 @@
   </script>
 </body>
 </html>
+
