--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
 
-    /* ANIMASI GRADASI BERJALAN */
     @keyframes gradientShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -33,7 +32,6 @@
       animation: gradientShift 8s ease infinite;
     }
 
-    /* ANIMASI FLOATING */
     @keyframes float {
       0%, 100% { transform: translateY(0px); }
       50% { transform: translateY(-15px); }
@@ -60,18 +58,18 @@
       min-width: 100%; min-height: 100%;
       z-index: -1;
       object-fit: cover;
-      filter: brightness(0.45);
+      filter: brightness(0.4);
     }
 
+    /* GLASS CARD DENGAN BORDER TEGAS DI SEMUA SISI */
     .glass-card {
-      background: rgba(255, 255, 255, 0.07);
-      backdrop-filter: blur(35px);
-      -webkit-backdrop-filter: blur(35px);
-      border: 1px solid rgba(255, 255, 255, 0.12);
-      box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.7);
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(40px);
+      -webkit-backdrop-filter: blur(40px);
+      border: 2px solid rgba(255, 255, 255, 0.4); /* Border lebih tebal & terang */
+      box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.8);
     }
 
-    /* EFEK EMBOSSED TOKO CELINE + GRADASI */
     .embossed-text {
       font-weight: 900;
       background: linear-gradient(to right, #ffffff, #a855f7, #3b82f6, #ffffff);
@@ -81,7 +79,7 @@
       animation: gradientShift 3s linear infinite;
       text-shadow: 
         -1px -1px 0px rgba(255,255,255,0.2), 
-         2px  2px 4px rgba(0,0,0,0.5);
+         2px  2px 4px rgba(0,0,0,0.6);
       letter-spacing: -0.05em;
     }
 
@@ -94,7 +92,7 @@
     .btn-action:hover {
       background: #f0f0f0;
       transform: scale(1.1);
-      box-shadow: 0 0 20px rgba(255,255,255,0.4);
+      box-shadow: 0 0 25px rgba(255,255,255,0.5);
     }
 
     input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
@@ -109,31 +107,30 @@
   </video>
 
   <div class="max-w-md w-full glass-card rounded-[3.5rem] p-10 relative text-white text-center floating-card">
-    <div class="absolute top-0 left-0 w-full h-1.5 animated-gradient"></div>
     
-    <div class="mb-10 pt-4">
+    <div class="mb-10">
       <h1 class="text-5xl embossed-text mb-2">Toko Celine</h1>
       <p class="text-green-400 text-[10px] font-black uppercase tracking-[0.4em]">Official Dollar Store</p>
     </div>
 
-    <div class="bg-white/5 rounded-[2rem] py-6 mb-10 border border-white/5 relative overflow-hidden">
-      <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest mb-1">Today's Rate</p>
-      <h3 id="displayRate" class="text-3xl font-black text-white italic">Rp 0</h3>
-      <p id="tanggalRealtime" class="text-[11px] text-white/20 mt-1"></p>
+    <div class="bg-white/10 rounded-[2rem] py-6 mb-10 border border-white/20">
+      <p class="text-[11px] text-green-400 font-black uppercase tracking-[0.2em] mb-1">Live Rate</p>
+      <h3 id="displayRate" class="text-4xl font-black text-white italic tracking-tight">Rp 0</h3>
+      <p id="tanggalRealtime" class="text-[12px] text-white font-semibold mt-2 opacity-90"></p>
     </div>
     
     <div class="mb-10">
-      <label class="text-[11px] font-bold text-white/40 uppercase tracking-widest mb-6 block">Ketik dibawah ini untuk Dollar yang mau dibeli</label>
+      <label class="text-[11px] font-bold text-white/60 uppercase tracking-widest mb-6 block">Ketik dibawah ini untuk Dollar yang mau dibeli</label>
       <div class="relative inline-flex items-center justify-center">
         <span class="text-4xl font-bold text-green-500 mr-2 animate-pulse">$</span>
         <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
-          class="bg-transparent border-b-2 border-white/10 py-2 text-6xl font-black text-white outline-none focus:border-green-500 transition-all w-48 text-center placeholder:text-white/5">
+          class="bg-transparent border-b-2 border-white/30 py-2 text-6xl font-black text-white outline-none focus:border-green-400 transition-all w-48 text-center placeholder:text-white/10">
       </div>
     </div>
 
-    <div class="animated-gradient p-8 rounded-[2.5rem] mb-10 shadow-lg transform transition-transform hover:scale-105">
-      <p class="text-[10px] text-white/70 font-bold uppercase tracking-widest mb-1">Total harus dibayar</p>
-      <h1 id="idrOutput" class="text-4xl font-black text-white tracking-tight drop-shadow-md">Rp 0</h1>
+    <div class="animated-gradient p-8 rounded-[2.5rem] mb-10 shadow-2xl border border-white/20">
+      <p class="text-[10px] text-white/80 font-bold uppercase tracking-widest mb-1">Total harus dibayar</p>
+      <h1 id="idrOutput" class="text-4xl font-black text-white tracking-tight drop-shadow-lg">Rp 0</h1>
     </div>
 
     <a href="https://t.me/selinnaa" target="_blank" 
@@ -142,7 +139,7 @@
       Hubungi Celine!
     </a>
 
-    <p class="text-[13px] text-white font-bold mt-10 italic drop-shadow-[0_2px_4px_rgba(0,0,0,0.8)] block">
+    <p class="text-[13px] text-white font-black mt-10 italic drop-shadow-[0_2px_4px_rgba(0,0,0,1)] block">
       *Rate sewaktu-waktu dapat berubah, pastikan bosku selalu update ^^
     </p>
 
