--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     
     <div class="mb-10">
       <h1 class="text-5xl embossed-text mb-2">Toko Celine</h1>
-      <p class="text-green-400 text-[10px] font-black uppercase tracking-[0.4em]">Official Dollar Store</p>
+      <p class="text-green-400 text-[10px] font-black uppercase tracking-[0.4em]">Trusted Digital Exchange</p>
     </div>
 
     <div class="bg-white/10 rounded-[2rem] py-6 mb-10 border border-white/20">
@@ -165,3 +165,4 @@
   </script>
 </body>
 </html>
+
