--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   
   <script>
-    const rateAktif = 17100; 
+    const rateAktif = 17150;  /* <=========== GANTI RATE DISINI YAAAAAAAAAAAAAAA */
   </script>
 
   <style>
@@ -163,3 +163,4 @@
   </script>
 </body>
 </html>
+
